Coulmn managment icon alignment issue resolve for Grid, budget and calendar table.

--- a/RevenuePlanner/Content/css/style.css
+++ b/RevenuePlanner/Content/css/style.css
@@ -37,8 +37,8 @@ body {
 	font-weight: normal;
 	background: #f0f0f0; /* Added for #2219 - Bhumika */
 	-ms-overflow-style: scrollbar;
-	overflow: auto;/*overflow-y: auto;
-    overflow-x: hidden;*/
+	overflow: auto;/*overflow-y: auto;*/
+    overflow-x: hidden;
 }
 /* Added for #2219 - Bhumika */
 .btn-Settings:after, .caret2, .cf:after, .cf:before, .improvement .gantt_task_drag:after {
@@ -6883,10 +6883,11 @@ footer a {
 }
 .budgetColums.budgetReporting {
 	padding-bottom: 15px;
-	margin-left: 20px;
+	margin-left: 0;
 	margin-right: 20px;
-	padding-left: 0;
+	padding-left: 20px;
 	padding-right: 0;
+    width:100%;/* Edited by Bhumika to resolve issue of horizintal scroll of window */
 }
 .budgetColums.budgetReporting > div {
 	padding: 5px 0 0 !important;
@@ -8085,8 +8086,8 @@ li.close-list {
 	line-height: normal;
 	margin-left: 2px;
 	margin-top: 0;
-	height: 20px;
-	width: 19px; /*20px changed by Bhumika #1997 18-3-2016 */
+	height: 19px;
+	width: 17px; /*20px changed by Bhumika #1997 18-3-2016 */
 	cursor: pointer;
     opacity: 1;
 }
@@ -10906,9 +10907,11 @@ li.accordion-inner.close-list {
 .task-tbl {
 	margin: 0 15px 0 20px;
 }
+
 .task-tbl .grid_add {
 	margin-top: 0px; /*by bheru mehta 09-12-2015*/
 }
+
 .login-header {
 	color: #3e3f37; /* Edited for #2219 - Bhumika */
 	font-family: source_sans_prolight;
@@ -13567,9 +13570,26 @@ input.serach-input {
 }
 #divupcomingact .sbOptions a{ padding: 5px 12px;font-size: 13px;}
 
-
-
-
+/* On Measure tab */
+/*.highcharts-container, .highcharts-container svg, .highcharts-container chart{width:100% !important; max-width:100% !important}
+#divTabData {
+    margin: 0;
+    overflow: hidden !important;
+    width:100% !important;
+    padding-left: 20px;
+    box-sizing: border-box;
+}
+#divTabData #gridbox{
+    width:99.5% !important; 
+    min-height: 100%;
+    overflow: hidden;
+    border: 1px solid #ccc;
+}
+#divTabData #gridbox table{ width: 100% !important;}
+#divMainReportPart{display: inline-block;
+    float: left;
+    width: 77%;
+    box-sizing: border-box;}*/
 /* ********************  new styles  - End ******************** */
 
 /* To set orange corner on Grid Table End  */
@@ -14010,6 +14030,7 @@ html, body {
 }
 
 @media (max-width: 1279px) {
+body{overflow:auto}
 .container-fluid {
 	min-width: 1280px !important;
 }
